--- a/.github/workflows/header-check.yml
+++ b/.github/workflows/header-check.yml
@@ -13,7 +13,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Verify header
-      uses: marketplace/actions/license-eye-header@v1
+      uses: apache/skywalking-eyes@v0.4.0
       with:
         header: |
           /*************************************************************************************************
