--- a/.github/workflows/header-check.yml
+++ b/.github/workflows/header-check.yml
@@ -1,3 +1,10 @@
+# /*************************************************************************************************
+# * Copyright 2022 Theai, Inc. (DBA Inworld)
+# *
+# * Use of this source code is governed by the Inworld.ai Software Development Kit License Agreement
+# * that can be found in the LICENSE.md file or at https://www.inworld.ai/sdk-license
+# *************************************************************************************************/
+
 name: Check license header
 
 on:
@@ -12,13 +19,16 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
-    - name: Verify header
+    - name: Fix License Header
       uses: apache/skywalking-eyes@v0.4.0
       with:
-        header: |
-          /*************************************************************************************************
-          * Copyright 2022 Theai, Inc. (DBA Inworld)
-          *
-          * Use of this source code is governed by the Inworld.ai Software Development Kit License Agreement
-          * that can be found in the LICENSE.md file or at https://www.inworld.ai/sdk-license
-          *************************************************************************************************/
+        mode: fix
+
+    - name: Apply Changes
+      uses: EndBug/add-and-commit@v4
+      env:
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        author_name: Divakar Dev
+        author_email: divakar@inworld.ai
+        message: 'Automatic application of license header'    
