--- a/.github/workflows/header-check.yml
+++ b/.github/workflows/header-check.yml
@@ -19,16 +19,7 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
-    - name: Fix License Header
+    - name: Check License Header
       uses: apache/skywalking-eyes@v0.4.0
       with:
-        mode: fix
-
-    - name: Apply Changes
-      uses: EndBug/add-and-commit@v4
-      env:
-      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        author_name: Divakar Dev
-        author_email: divakar@inworld.ai
-        message: 'Automatic application of license header'    
+        mode: check
