--- a/.github/workflows/header-check.yml
+++ b/.github/workflows/header-check.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
-    - name: Fix License Header
+    - name: Check License Header
       uses: apache/skywalking-eyes@v0.4.0
       with:
-        mode: fix   
+        mode: Check   
