exception for yml

--- a/.licenserc.yaml
+++ b/.licenserc.yaml
@@ -87,16 +87,8 @@ header:
     - '**/*.mask'
     - '**/*.controller'
     - '**/*.yaml'
-
-
-
-
-
-
-
-
-
-
+    - '**/*.yml'
+    
   comment: on-failure
 
 dependency:
