--- a/.github/workflows/createRelease.yml
+++ b/.github/workflows/createRelease.yml
@@ -23,16 +23,16 @@
     
     build:
       name: Build
-      runs-on: ubuntu-20.04
+      runs-on: ubuntu-latest
       concurrency:
         group: build-a-${{ github.ref }}
         cancel-in-progress: true
       steps:
         - name: Checkout code
-          uses: actions/checkout@v2
+          uses: actions/checkout@v3
           with:
             lfs: true
-        - uses: actions/cache@v2
+        - uses: actions/cache@v3
           with:
             path: Library
             key: Library-build
