--- a/.github/workflows/createRelease.yml
+++ b/.github/workflows/createRelease.yml
@@ -2,6 +2,9 @@
 
   on:
     workflow_dispatch:
+      inputs:
+        version:
+          type: string
         
   env:
     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
