--- a/.github/workflows/createRelease.yml
+++ b/.github/workflows/createRelease.yml
@@ -1,10 +1,8 @@
   name: Create Release
 
   on:
-    workflow_dispatch:
-      inputs:
-        version:
-          type: string
+    release:
+      types: [published]
         
   env:
     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
