--- a/.github/workflows/createRelease.yml
+++ b/.github/workflows/createRelease.yml
@@ -1,8 +1,7 @@
   name: Create Release
 
   on:
-    release:
-      types: [published]
+    workflow_dispatch:
         
   env:
     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
