--- a/.github/workflows/createRelease.yml
+++ b/.github/workflows/createRelease.yml
@@ -28,6 +28,7 @@
             restore-keys: Library-build
         - uses: game-ci/unity-builder@v2
           with:
+            unityVersion: 2021.3.6f1
             projectPath: ./
             buildMethod: ExportPackage.Editor.UnityPackageExporter.Export
         - uses: actions/upload-artifact@v2
