--- a/.github/workflows/createRelease.yml
+++ b/.github/workflows/createRelease.yml
@@ -8,6 +8,7 @@
     UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
     UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
     UNITY_SERIAL: ${{ secrets.UNITY_SERIAL }}
+    IMAGE_TAG: $(git rev-parse --short "$GITHUB_SHA")
 
   jobs:   
     build:
