--- a/.github/workflows/createRelease.yml
+++ b/.github/workflows/createRelease.yml
@@ -12,31 +12,30 @@
 
   jobs:   
     build:
-      name: Build
-      runs-on: ubuntu-20.04
-      concurrency:
-        group: build-a-${{ github.ref }}
-        cancel-in-progress: true
-      steps:
-        - name: Checkout code
-          uses: actions/checkout@v2
-          with:
-            lfs: true
-        - uses: actions/cache@v2
-          with:
-            path: Library
-            key: Library-build
-            restore-keys: Library-build
-        - uses: game-ci/unity-builder@v2
-          with:
-            unityVersion: 2021.3.6f1
-            projectPath: ./
-            buildMethod: ExportPackage.Editor.UnityPackageExporter.Export
-        - uses: actions/upload-artifact@v2
-          with:
-            name: inworld-sdk
-            path: Build/ai.inworld.runtime-sdk.unitypackage  
-    
+    name: Build
+    runs-on: ubuntu-20.04
+    concurrency:
+      group: build-a-${{ github.ref }}
+      cancel-in-progress: true
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+        with:
+          lfs: true
+      - uses: actions/cache@v2
+        with:
+          path: Library
+          key: Library-build
+          restore-keys: Library-build
+      - uses: game-ci/unity-builder@v2
+        with:
+          unityVersion: 2021.3.6f1
+          buildMethod: ExportPackage.Editor.UnityPackageExporter.Export
+      - uses: actions/upload-artifact@v2
+        with:
+          name: apk-alpha
+          path: Build/ai.inworld.runtime-sdk.unitypackage
+  
     create-release:
       needs: [build]
       runs-on: [ self-hosted, kubernetes, withdocker ]
@@ -49,7 +48,7 @@
         - uses: softprops/action-gh-release@v1
           if: startsWith(github.ref_name, 'refs/tags/')
           with:
-            files:   ${{ steps.upload-artifact.outputs.artifact-path }}/ai.inworld.runtime-sdk.unitypackage
+            files:   ${{ steps.upload-artifact.outputs.artifact-path }}/apk-alpha
             tag_name: ${{ github.ref }}
             release_name: "Release ${{ github.ref }}"
             generate_release_notes: true
