--- a/.github/workflows/header-check.yml
+++ b/.github/workflows/header-check.yml
@@ -8,11 +8,18 @@
 name: Check license header
 
 on:
-  pull_request:
-    branches: [main]
+  pull_request_review:
+    types: [submitted]
 
 jobs:
+  approved:
+    if: github.event.review.state == 'approved'
+    runs-on: ubuntu-latest
+    steps:
+      - run: echo "This PR was approved"
+
   check_header:
+    needs: [approved]
     runs-on: ubuntu-latest
 
     steps:
