--- a/.github/workflows/AttachToRelease.yml
+++ b/.github/workflows/AttachToRelease.yml
@@ -1,7 +1,8 @@
 name: Attach Package to Release
 
 on:
-  workflow_dispatch:
+  release:
+    types: [published]
 
 env:
     UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
@@ -25,14 +26,14 @@ jobs:
               path: Library
               key: Library-build
               restore-keys: Library-build
-          - uses: game-ci/unity-builder@v2
-            with:
-              unityVersion: 2021.3.6f1
-              buildMethod: ExportPackage.Editor.UnityPackageExporter.Export
-          - uses: actions/upload-artifact@v3
-            with:
-              name: Inworld-Unity-SDK
-              path: Build/ai.inworld.runtime-sdk.unitypackage
+          ##- uses: game-ci/unity-builder@v2
+          ##  with:
+          ##    unityVersion: 2021.3.6f1
+          ##    buildMethod: ExportPackage.Editor.UnityPackageExporter.Export
+          ##- uses: actions/upload-artifact@v3
+          ##  with:
+          ##    name: Inworld-Unity-SDK
+          ##    path: Build/ai.inworld.runtime-sdk.unitypackage
               
   attach-to-release:
     needs: [build]
