--- a/.github/workflows/AttachToRelease.yml
+++ b/.github/workflows/AttachToRelease.yml
@@ -26,14 +26,14 @@ jobs:
               path: Library
               key: Library-build
               restore-keys: Library-build
-          ##- uses: game-ci/unity-builder@v2
-          ##  with:
-          ##    unityVersion: 2021.3.6f1
-          ##    buildMethod: ExportPackage.Editor.UnityPackageExporter.Export
-          ##- uses: actions/upload-artifact@v3
-          ##  with:
-          ##    name: Inworld-Unity-SDK
-          ##    path: Build/ai.inworld.runtime-sdk.unitypackage
+          - uses: game-ci/unity-builder@v2
+            with:
+              unityVersion: 2021.3.6f1
+              buildMethod: ExportPackage.Editor.UnityPackageExporter.Export
+          - uses: actions/upload-artifact@v3
+            with:
+              name: Inworld-Unity-SDK
+              path: Build/ai.inworld.runtime-sdk.unitypackage
               
   attach-to-release:
     needs: [build]
@@ -44,8 +44,7 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Attach package to release
-      run: echo "${{ github.ref }}" 
-      ##uses: softprops/action-gh-release@v1
-      ##if: startsWith(github.ref, 'refs/tags/')
-      ##with:
-      ##  files: ${{ steps.upload-artifact.outputs.artifact-path }}/apk-alpha
+      uses: softprops/action-gh-release@v1
+      if: startsWith(github.ref, 'refs/tags/')
+      with:
+        files: ${{ steps.upload-artifact.outputs.artifact-path }}/apk-alpha
