--- a/.github/workflows/AttachToRelease.yml
+++ b/.github/workflows/AttachToRelease.yml
@@ -48,4 +48,4 @@ jobs:
       uses: softprops/action-gh-release@v1
       if: startsWith(github.ref, 'refs/tags/')
       with:
-        files: ${{ steps.upload-artifact.outputs.artifact-path }}/Inworld-Unity-SDK
+        files: Build/ai.inworld.runtime-sdk.unitypackage/Inworld-Unity-SDK
