--- a/.github/workflows/AttachToRelease.yml
+++ b/.github/workflows/AttachToRelease.yml
@@ -30,7 +30,8 @@ jobs:
             with:
               unityVersion: 2021.3.6f1
               buildMethod: ExportPackage.Editor.UnityPackageExporter.Export
-          - uses: actions/upload-artifact@v3
+          - name: upload-artifact
+            uses: actions/upload-artifact@v3
             with:
               name: Inworld-Unity-SDK
               path: Build/ai.inworld.runtime-sdk.unitypackage
@@ -47,4 +48,4 @@ jobs:
       uses: softprops/action-gh-release@v1
       if: startsWith(github.ref, 'refs/tags/')
       with:
-        files: ${{ steps.upload-artifact.outputs.artifact-path }}/Inworld-Unity-SDK
+        files: Build/ai.inworld.runtime-sdk.unitypackage/Inworld-Unity-SDK
