--- a/.github/workflows/AttachToRelease.yml
+++ b/.github/workflows/AttachToRelease.yml
@@ -43,7 +43,13 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
-
+      
+    - name: download-artifact
+      uses: actions/download-artifact@v3
+      with:
+        name: Inworld-Unity-SDK
+        path: Build/ai.inworld.runtime-sdk.unitypackage
+              
     - name: Attach package to release
       uses: softprops/action-gh-release@v1
       if: startsWith(github.ref, 'refs/tags/')
