--- a/.github/workflows/AttachToRelease.yml
+++ b/.github/workflows/AttachToRelease.yml
@@ -44,7 +44,7 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
       
-    - name: download-artifact
+    - name: download
       uses: actions/download-artifact@v3
       with:
         name: Inworld-Unity-SDK
@@ -54,4 +54,4 @@ jobs:
       uses: softprops/action-gh-release@v1
       if: startsWith(github.ref, 'refs/tags/')
       with:
-        files: Build/ai.inworld.runtime-sdk.unitypackage/Inworld-Unity-SDK
+        files: ${{steps.download.outputs.download-path}}/Inworld-Unity-SDK
