--- a/.github/workflows/AttachToRelease.yml
+++ b/.github/workflows/AttachToRelease.yml
@@ -41,18 +41,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+    - uses: actions/checkout@v3
       
-    - name: download
-      uses: actions/download-artifact@v3
+    - uses: actions/download-artifact@v3
+      id: download
       with:
         name: Inworld-Unity-SDK
         path: Build/ai.inworld.runtime-sdk.unitypackage
               
     - name: Attach package to release
-      run: echo "${{ steps.download.outputs.download-path }}" 
-      ##uses: softprops/action-gh-release@v1
-      ##if: startsWith(github.ref, 'refs/tags/')
-      ##with:
-      ##  files: ${{steps.download.outputs.download-path}}/Inworld-Unity-SDK
+      uses: softprops/action-gh-release@v1
+      if: startsWith(github.ref, 'refs/tags/')
+      with:
+        files: ${{steps.download.outputs.download-path}}/Inworld-Unity-SDK
