--- a/.github/workflows/AttachToRelease.yml
+++ b/.github/workflows/AttachToRelease.yml
@@ -53,4 +53,4 @@ jobs:
       uses: softprops/action-gh-release@v1
       if: startsWith(github.ref, 'refs/tags/')
       with:
-        files: ${{steps.download.outputs.download-path}}
+        files: ${{steps.download.outputs.download-path}}/Inworld-Unity-SDK.zip
