--- a/.github/workflows/AttachToRelease.yml
+++ b/.github/workflows/AttachToRelease.yml
@@ -48,6 +48,16 @@ jobs:
       with:
         name: Inworld-Unity-SDK
         path: Build/
+        
+    - name: Print artifact directory
+      run: |
+            ls ${{steps.download.outputs.download-path}}
+
+    - name: Print entire directory structure
+      run: |
+        pwd
+        ls -R
+
               
     - name: Attach package to release
       uses: softprops/action-gh-release@v1
