--- a/.github/workflows/AttachToRelease.yml
+++ b/.github/workflows/AttachToRelease.yml
@@ -63,4 +63,5 @@ jobs:
       uses: softprops/action-gh-release@v1
       if: startsWith(github.ref, 'refs/tags/')
       with:
-        files: ${{steps.download.outputs.download-path}}/Inworld-Unity-SDK
+        files: Build/ai.inworld.runtime-sdk.unitypackage
+
