--- a/.github/workflows/AttachToRelease.yml
+++ b/.github/workflows/AttachToRelease.yml
@@ -34,25 +34,33 @@ jobs:
             uses: actions/upload-artifact@v3
             with:
               name: Inworld-Unity-SDK
-              path: Build/ai.inworld.runtime-sdk.unitypackage
+              path: Build/
               
   attach-to-release:
     needs: [build]
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+    - uses: actions/checkout@v3
       
-    - name: download
-      uses: actions/download-artifact@v3
+    - uses: actions/download-artifact@v3
+      id: download
       with:
         name: Inworld-Unity-SDK
-        path: Build/ai.inworld.runtime-sdk.unitypackage
+        path: Build/
+        
+    ##- name: Print artifact directory
+    ##  run: |
+    ##        ls ${{steps.download.outputs.download-path}}
+
+    ##- name: Print entire directory structure
+    ##  run: |
+    ##    pwd
+    ##    ls -R
               
     - name: Attach package to release
-      run: echo "${{ steps.download.outputs.download-path }}" 
-      ##uses: softprops/action-gh-release@v1
-      ##if: startsWith(github.ref, 'refs/tags/')
-      ##with:
-      ##  files: ${{steps.download.outputs.download-path}}/Inworld-Unity-SDK
+      uses: softprops/action-gh-release@v1
+      if: startsWith(github.ref, 'refs/tags/')
+      with:
+        files: Build/ai.inworld.runtime-sdk.unitypackage
+
