--- a/.github/workflows/header-check.yml
+++ b/.github/workflows/header-check.yml
@@ -8,8 +8,8 @@
 name: Check license header
 
 on:
-  pull_request_review:
-    types: [submitted]
+  pull_request:
+    branches: [main]
 
 jobs:
   approved:
