Build on PR Approval

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,8 @@
   name: Build
 
   on:
-    workflow_dispatch:
+    pull_request_review:
+      types: [submitted]
         
   env:
     UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
