--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,8 +1,7 @@
   name: Build
 
   on:
-    pull_request_review:
-      types: [submitted]
+    workflow_dispatch
         
   env:
     UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
