Fix for license check not runninng
Removed obsolete check

--- a/.github/workflows/header-check.yml
+++ b/.github/workflows/header-check.yml
@@ -12,14 +12,14 @@ on:
     branches: [main]
 
 jobs:
-  approved:
-    if: github.event.review.state == 'approved'
-    runs-on: ubuntu-latest
-    steps:
-      - run: echo "This PR was approved"
+  ##approved:
+  ##  if: github.event.review.state == 'approved'
+  ##  runs-on: ubuntu-latest
+  ##  steps:
+  ##    - run: echo "This PR was approved"
 
   check_header:
-    needs: [approved]
+    ##needs: [approved]
     runs-on: ubuntu-latest
 
     steps:
