More ignores of unneccesary folders to clean up unstaged file list

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,10 @@
 /[Bb]uilds/
 /[Ll]ogs/
 /[Mm]emoryCaptures/
+/[Pp]rojectSettings/
+/[Pp]ackages/
+/[Uu]serSettings/
+/.idea/
 
 # Asset meta data should only be ignored when the corresponding asset is also ignored
 !/[Aa]ssets/**/*.meta
