--- a/.github/workflows/BuildAllWorkflows.yml
+++ b/.github/workflows/BuildAllWorkflows.yml
@@ -37,6 +37,7 @@
               UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
             with:
               unityVersion: 2021.3.6f1
+              projectPath: Assets/PlatformBuildTester~
               targetPlatform: ${{ matrix.targetPlatform }}
           - uses: actions/upload-artifact@v3
             with:
