--- a/.github/workflows/BuildAllWorkflows.yml
+++ b/.github/workflows/BuildAllWorkflows.yml
@@ -38,6 +38,7 @@
             with:
               unityVersion: 2021.3.19f1
               projectPath: Assets/PlatformBuildTester~
+              customParameters: -CleanBuildCache
               targetPlatform: ${{ matrix.targetPlatform }}
           - uses: actions/upload-artifact@v3
             with:
