--- a/.github/workflows/BuildAllWorkflows.yml
+++ b/.github/workflows/BuildAllWorkflows.yml
@@ -37,6 +37,7 @@
               UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
             with:
               unityVersion: 2021.3.19f1
+              build-method: 'BuildCommand.PerformBuild'
               projectPath: Assets/PlatformBuildTester~
               customParameters: -CleanBuildCache
               targetPlatform: ${{ matrix.targetPlatform }}
