--- a/.github/workflows/BuildAllWorkflows.yml
+++ b/.github/workflows/BuildAllWorkflows.yml
@@ -19,10 +19,10 @@
         fail-fast: false
         matrix:
           targetPlatform:
-            #- StandaloneOSX # Build a macOS standalone (Intel 64-bit).
+            - StandaloneOSX # Build a macOS standalone (Intel 64-bit).
             - StandaloneWindows # Build a Windows standalone.
             - StandaloneWindows64 # Build a Windows 64-bit standalone.
-            #- iOS # Build an iOS player.
+            - iOS # Build an iOS player.
             - Android # Build an Android .apk standalone app.
       steps:
           - name: Checkout code
