--- a/Assets/PlatformBuildTester~/BuildTester/Packages/manifest.json
+++ b/Assets/PlatformBuildTester~/BuildTester/Packages/manifest.json
@@ -1,7 +1,7 @@
 {
   "dependencies": {
-    "ai.inworld.unity-sdk": "file:./../../../",
-    "com.unity.collab-proxy": "2.0.0",
+    "ai.inworld.unity-sdk": "file:./../../../Inworld.AI",
+    "com.unity.collab-proxy": "2.0.1",
     "com.unity.feature.development": "1.0.1",
     "com.unity.ide.rider": "3.0.18",
     "com.unity.ide.visualstudio": "2.0.17",
