added editor config as a file type to be ignored

--- a/.licenserc.yaml
+++ b/.licenserc.yaml
@@ -89,6 +89,7 @@ header:
     - '**/*.yaml'
     - '**/*.yml'
     - '**/*.config'   
+    - '**/*.editorconfig'     
     
   comment: on-failure
 
