Refactored packets in the Inworld.Packets namespace to account for preprocessor symbol and be compatible with both the NDK and the defauly GRPC implementation. Preprocessor allows for easy switching between GRPC and NDK

--- a/Assets/Inworld.AI/InworldAI.asmdef
+++ b/Assets/Inworld.AI/InworldAI.asmdef
@@ -14,6 +14,12 @@
     "precompiledReferences": [],
     "autoReferenced": true,
     "defineConstraints": [],
-    "versionDefines": [],
+    "versionDefines": [
+        {
+            "name": "Unity",
+            "expression": "",
+            "define": "INWORLD_NDK"
+        }
+    ],
     "noEngineReferences": false
 }
