--- a/Assets/Inworld.AI/InworldAI.asmdef
+++ b/Assets/Inworld.AI/InworldAI.asmdef
@@ -18,7 +18,7 @@
         {
             "name": "Unity",
             "expression": "",
-            "define": "INWORLD_NDK"
+            "define": ""
         }
     ],
     "noEngineReferences": false
