--- a/WebsocketDemo/Assets/Inworld.Samples/Inworld.Samples.asmdef
+++ b/WebsocketDemo/Assets/Inworld.Samples/Inworld.Samples.asmdef
@@ -4,7 +4,8 @@
     "references": [
         "GUID:d967223c9a0ec784a869892a4c0859aa",
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
-        "GUID:31ae6b59728676b4ca278b9902aa45e6"
+        "GUID:31ae6b59728676b4ca278b9902aa45e6",
+        "GUID:3a37385c54c76bf4fb92dd75e8a6e1ed"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
