CORE-3336 Add inner readme

--- a/WebsocketDemo/Assets/InworldAI.Assets/Inworld.Assets.asmdef
+++ b/WebsocketDemo/Assets/InworldAI.Assets/Inworld.Assets.asmdef
@@ -1,3 +1,16 @@
 {
-	"name": "Inworld.Assets"
+    "name": "Inworld.Assets",
+    "rootNamespace": "",
+    "references": [
+        "GUID:d967223c9a0ec784a869892a4c0859aa"
+    ],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
