--- a/.github/workflows/AttachToRelease.yml
+++ b/.github/workflows/AttachToRelease.yml
@@ -3,7 +3,6 @@ name: Attach Package on Release
 on:
   release:
     types: [published]
-  workflow-dispatch:
 
 env:
     UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
@@ -36,6 +35,15 @@ jobs:
             with:
               name: Inworld-Unity-SDK
               path: Build/
+          - uses: game-ci/unity-builder@v2
+            with:
+              unityVersion: 2021.3.6f1
+              buildMethod: ExportPackage.Editor.UnityPackageExporter.ExportSamples
+          - name: upload-artifact
+            uses: actions/upload-artifact@v3
+            with:
+              name: Inworld-Unity-SDK-Samples
+              path: Build/
               
   attach-to-release:
     needs: [build]
@@ -44,24 +52,26 @@ jobs:
     steps:
     - uses: actions/checkout@v3
       
-    - uses: actions/download-artifact@v3
-      id: download
+    - name: Download SDK
+      uses: actions/download-artifact@v3
       with:
         name: Inworld-Unity-SDK
         path: Build/
-        
-    ##- name: Print artifact directory
-    ##  run: |
-    ##        ls ${{steps.download.outputs.download-path}}
 
-    ##- name: Print entire directory structure
-    ##  run: |
-    ##    pwd
-    ##    ls -R
-              
-    - name: Attach package to release
+    - name: Download SDK Samples
+      uses: actions/download-artifact@v3
+      with:
+        name: Inworld-Unity-SDK-Samples
+        path: Build/
+        
+    - name: Attach SDK package to release
       uses: softprops/action-gh-release@v1
       if: startsWith(github.ref, 'refs/tags/')
       with:
         files: Build/ai.inworld.runtime-sdk.unitypackage
 
+    - name: Attach SDK Samples package to release
+      uses: softprops/action-gh-release@v1
+      if: startsWith(github.ref, 'refs/tags/')
+      with:
+        files: Build/ai.inworld.runtime-sdk-samples.unitypackage
