--- a/.github/workflows/AttachToRelease.yml
+++ b/.github/workflows/AttachToRelease.yml
@@ -77,6 +77,15 @@ jobs:
             with:
               name: Inworld-Unity-RPM-Samples
               path: Build/
+          - uses: game-ci/unity-builder@v2
+            with:
+              unityVersion: 2021.3.6f1
+              buildMethod: ExportPackage.Editor.UnityPackageExporter.ExportCompletePackage
+          - name: upload-artifact
+            uses: actions/upload-artifact@v3
+            with:
+              name: Inworld-Unity-Complete
+              path: Build/
               
   attach-to-release:
     needs: [build]
@@ -109,6 +118,12 @@ jobs:
         name: Inworld-Unity-RPM-Samples
         path: Build/
     
+    - name: Download Complete Package
+      uses: actions/download-artifact@v3
+      with:
+        name: Inworld-Unity-Complete
+        path: Build/
+    
     - name: Rename packages with release tag
       run: |
         TAG_NAME=${GITHUB_REF/refs\/tags\//}
@@ -116,6 +131,8 @@ jobs:
         mv Build/ai.inworld.runtime-sdk-lite.unitypackage Build/ai.inworld.runtime-sdk-lite-$TAG_NAME.unitypackage
         mv Build/ai.inworld.runtime-sdk-samples.unitypackage Build/ai.inworld.runtime-sdk-samples-$TAG_NAME.unitypackage
         mv Build/ai.inworld.runtime-sdk-innequin.unitypackage Build/ai.inworld.runtime-sdk-innequin-$TAG_NAME.unitypackage
+        mv Build/ai.inworld.runtime-sdk-complete.unitypackage Build/ai.inworld.runtime-sdk-complete-$TAG_NAME.unitypackage
+
     
     - name: Attach SDK package to release
       uses: softprops/action-gh-release@v1
@@ -140,3 +157,9 @@ jobs:
       if: startsWith(github.ref, 'refs/tags/')
       with:
         files: Build/ai.inworld.runtime-sdk-samples-${{ github.ref/refs/tags/ }}.unitypackage
+
+    - name: Attach Complete package to release
+      uses: softprops/action-gh-release@v1
+      if: startsWith(github.ref, 'refs/tags/')
+      with:
+        files: Build/ai.inworld.runtime-sdk-complete-${{ github.ref/refs/tags/ }}.unitypackage
