--- a/Assets/Inworld/Inworld.Editor/Inworld.Editor.asmdef
+++ b/Assets/Inworld/Inworld.Editor/Inworld.Editor.asmdef
@@ -2,7 +2,8 @@
     "name": "Inworld.Editor",
     "rootNamespace": "",
     "references": [
-        "GUID:d967223c9a0ec784a869892a4c0859aa"
+        "GUID:d967223c9a0ec784a869892a4c0859aa",
+        "GUID:31ae6b59728676b4ca278b9902aa45e6"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
