Update header checking

--- a/.licenserc.yaml
+++ b/.licenserc.yaml
@@ -73,7 +73,11 @@ header:
     - 'oap-server/server-starter/src/main/resources/version.properties'
     - '**/ThirdParty/**'
     - '**/UnityWebSocket/**'
+    - '**/Packages/**'
+    - '**/ProjectSettings/**'
     - '**/*.anim'
+    - '**/*.cginc'
+    - '**/*.dwlt'
     - '**/*.meta'
     - '**/*.asset'
     - '**/*.unity'
