update head checket

--- a/.licenserc.yaml
+++ b/.licenserc.yaml
@@ -80,6 +80,8 @@ header:
     - '**/*.asset'
     - '**/*.unity'
     - '**/*.prefab'
+    - '**/*.dwlt'
+    - '**/*.cginc'
     - '**/*.mat'
     - '**/*.lighting'
     - '**/*.uxml'
