--- a/.github/workflows/BuildAllWorkflows.yml
+++ b/.github/workflows/BuildAllWorkflows.yml
@@ -37,12 +37,14 @@
               key: Library-${{ matrix.targetPlatform }}
               restore-keys: Library-
 
-          - name: Setup Unity
-            uses: game-ci/unity-setup@v2
+          - name: Run tests
+            uses: game-ci/unity-test-runner@v4
             env:
               UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
+              UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
+              UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
             with:
-              unityVersion: 2022.3.4f1
+              githubToken: ${{ secrets.GITHUB_TOKEN }}
            
           - name: Export Package 
             run: Unity -quit -batchmode -projectPath "${{ github.workspace }}" -executeMethod Inworld.UnityPackageExporter.ExportLite
