--- a/.github/workflows/BuildAllWorkflows.yml
+++ b/.github/workflows/BuildAllWorkflows.yml
@@ -38,8 +38,13 @@
               restore-keys: Library-
 
           - name: Export Package 
-            uses: game-ci/cli
-            run: Unity -quit -batchmode -projectPath "${{ github.workspace }}" -executeMethod Inworld.UnityPackageExporter.ExportLite
+            uses: game-ci/unity-builder@v4
+            env:
+              UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
+              UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
+              UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
+            with:
+              buildMethod: Inworld.UnityPackageExporter.ExportLite
           
           - name: Run tests
             uses: game-ci/unity-test-runner@v4
