--- a/InworldBuildTest~/Assets/InworldUnitTest/InworldUnitTest.asmdef
+++ b/InworldBuildTest~/Assets/InworldUnitTest/InworldUnitTest.asmdef
@@ -4,7 +4,8 @@
     "references": [
         "UnityEngine.TestRunner",
         "UnityEditor.TestRunner",
-        "Unity.TextMeshPro"
+        "Unity.TextMeshPro",
+        "Inworld.AI"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
