--- a/.github/workflows/BuildAllWorkflows.yml
+++ b/.github/workflows/BuildAllWorkflows.yml
@@ -1,5 +1,5 @@
 
-  name: BuildAllPlatforms
+  name: UnitTest
 
   on:
     workflow_dispatch:
@@ -13,7 +13,7 @@
 
   jobs:   
     buildForAllSupportedPlatforms:
-      name: Build for ${{ matrix.targetPlatform }}
+      name: Test for ${{ matrix.targetPlatform }}
       runs-on: ubuntu-latest
 
       strategy:
@@ -26,11 +26,7 @@
           testMode:
             - playmode
           targetPlatform:
-            - StandaloneOSX # Build a macOS standalone (Intel 64-bit).
-            - StandaloneWindows # Build a Windows standalone.
-            - StandaloneWindows64 # Build a Windows 64-bit standalone.
-            - iOS # Build an iOS player.
-            - Android # Build an Android .apk standalone app.
+            - WebGL # YAN: In Linux, it seems audio sampling is prohibited. Use WebGL for now
 
       steps:
           - name: Checkout Repo
