--- a/.licenserc.yaml
+++ b/.licenserc.yaml
@@ -21,11 +21,11 @@ header:
     copyright-owner: Theai, Inc. (DBA Inworld)
     content : | 
       /*************************************************************************************************
-      * Copyright 2022 Theai, Inc. (DBA Inworld)
+      * Copyright 2022-2024 Theai, Inc. dba Inworld AI
       *
       * Use of this source code is governed by the Inworld.ai Software Development Kit License Agreement
       * that can be found in the LICENSE.md file or at https://www.inworld.ai/sdk-license
-      ************************************************************************************************
+      *************************************************************************************************/
 
   paths-ignore:
     - '.github/ISSUE_TEMPLATE'
