--- a/.github/workflows/BuildAllWorkflows.yml
+++ b/.github/workflows/BuildAllWorkflows.yml
@@ -1,49 +1,47 @@
 
-  name: BuildAllPlatforms
+name: BuildAllPlatforms
 
-  on:
-    workflow_dispatch:
-    pull_request:
-      branches: [main]
-        
-  env:
-    UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
-    UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
-    UNITY_SERIAL: ${{ secrets.UNITY_SERIAL }}
+on:
+  workflow_dispatch:
+  pull_request:
+    branches: [main]
+      
+env:
+  UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
+  UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
+  UNITY_SERIAL: ${{ secrets.UNITY_SERIAL }}
 
-  jobs:   
-    buildForAllSupportedPlatforms:
-      name: Build for ${{ matrix.targetPlatform }}
-      runs-on: ubuntu-latest
-      strategy:
-        fail-fast: false
-        matrix:
-          targetPlatform:
-            - StandaloneOSX # Build a macOS standalone (Intel 64-bit).
-            - StandaloneWindows # Build a Windows standalone.
-            - StandaloneWindows64 # Build a Windows 64-bit standalone.
-            - iOS # Build an iOS player.
-            - Android # Build an Android .apk standalone app.
-      steps:
-          - name: Checkout Repo
-            uses: actions/checkout@v3
-            with:
-              lfs: true        
+jobs:   
+  buildForAllSupportedPlatforms:
+    name: Build for ${{ matrix.targetPlatform }}
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        targetPlatform:
+          - StandaloneOSX # Build a macOS standalone (Intel 64-bit).
+          - StandaloneWindows # Build a Windows standalone.
+          - StandaloneWindows64 # Build a Windows 64-bit standalone.
+          - iOS # Build an iOS player.
+          - Android # Build an Android .apk standalone app.
+    steps:
+        - name: Checkout Repo
+          uses: actions/checkout@v3
+          with:
+            lfs: true        
 
-          - name: Cache Library          
-            uses: actions/cache@v3
-            with:
-              path: Library
-              key: Library-${{ matrix.targetPlatform }}
-              restore-keys: Library-
+        - name: Cache Library          
+          uses: actions/cache@v3
+          with:
+            path: Library
+            key: Library-${{ matrix.targetPlatform }}
+            restore-keys: Library-
 
-          - name: Setup Unity
-            uses: game-ci/unity-setup@v2
-            env:
-              UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
-            with:
-              unityVersion: 2022.3.4f1
-           
-          - name: Export Package 
-            run: Unity -quit -batchmode -projectPath "${{ github.workspace }}" -executeMethod Inworld.UnityPackageExporter.ExportLite
+        - name: Build Test
+          uses: game-ci/unity-builder@v4
+          with:
+            buildMethod: Inworld.UnityPackageExporter.Build
+            customParameters: -targetPlatform ${{ matrix.targetPlatform }}
+            unityVersion: 2022.3.17f1
+
 
