--- a/.github/workflows/BuildAllWorkflows.yml
+++ b/.github/workflows/BuildAllWorkflows.yml
@@ -40,7 +40,7 @@ jobs:
         - name: Build Test
           uses: game-ci/unity-builder@v4
           with:
-            buildMethod: Inworld.UnityPackageExporter.Build
+            buildMethod: Inworld.UnityPackageExporter.BuildTestScene
             customParameters: -targetPlatform ${{ matrix.targetPlatform }}
             unityVersion: 2022.3.17f1
 
