INTG-1136 draw narrative graphs

--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-    "com.inworld.unity": "https://github.com/inworld-ai/inworld-unity.git",
+    "com.inworld.unity": "file:C:/Code/inworld-unity",
     "com.unity.collab-proxy": "2.2.0",
     "com.unity.feature.development": "1.0.1",
     "com.unity.timeline": "1.7.5",
