--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-    "com.inworld.unity": "https://github.com/inworld-ai/inworld-unity.git",
+    "com.inworld.unity.core": "file:../Assets/Inworld/com.inworld.unity.core-3.3.0.tgz",
     "com.unity.collab-proxy": "2.2.0",
     "com.unity.feature.development": "1.0.1",
     "com.unity.timeline": "1.7.5",
