--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-    "com.inworld.unity.core": "file:../Assets/Inworld/com.inworld.unity.core-3.3.0.tgz",
+    "com.inworld.unity.core": "file:../Assets/Inworld/com.inworld.unity.core-3.3.1.tgz",
     "com.unity.collab-proxy": "2.2.0",
     "com.unity.feature.development": "1.0.1",
     "com.unity.timeline": "1.7.5",
@@ -37,5 +37,6 @@
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
     "com.unity.modules.xr": "1.0.0"
-  }
+  },
+  "testables": ["com.inworld.unity.core"]
 }
