--- a/Assets/Inworld/Inworld.Native/InworldAI.NDK.asmdef
+++ b/Assets/Inworld/Inworld.Native/InworldAI.NDK.asmdef
@@ -1,12 +1,13 @@
 {
-    "name": "InworldAI.NDK",
+    "name": "InworldAI.Native",
     "rootNamespace": "",
     "references": [
         "GUID:d967223c9a0ec784a869892a4c0859aa",
         "GUID:31ae6b59728676b4ca278b9902aa45e6",
         "GUID:b675416fa6f0d2443a77bdb81c0208c5",
         "GUID:9d53d87d8d9a45842bb9427f2244cfee",
-        "GUID:6055be8ebefd69e48b49212b09b47b2f"
+        "GUID:6055be8ebefd69e48b49212b09b47b2f",
+        "GUID:c98377141161c7746a178fb5cb1af075"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
