INTG-592 Add sentis support

--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-    "com.inworld.unity.core": "file:../../inworld-unity-core",
+    "com.inworld.unity.core": "file:../Assets/Inworld/com.inworld.unity.core-3.3.1.tgz",
     "com.unity.collab-proxy": "2.2.0",
     "com.unity.feature.development": "1.0.1",
     "com.unity.sentis": "1.2.0-exp.2",
