--- a/Assets/Inworld/Inworld.Native/InworldAI.Native.asmdef
+++ b/Assets/Inworld/Inworld.Native/InworldAI.Native.asmdef
@@ -6,7 +6,8 @@
         "GUID:31ae6b59728676b4ca278b9902aa45e6",
         "GUID:b675416fa6f0d2443a77bdb81c0208c5",
         "GUID:9d53d87d8d9a45842bb9427f2244cfee",
-        "GUID:6055be8ebefd69e48b49212b09b47b2f"
+        "GUID:6055be8ebefd69e48b49212b09b47b2f",
+        "GUID:c98377141161c7746a178fb5cb1af075"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
