Test naudio in mac

--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-    "com.inworld.unity.core": "file:../Assets/Inworld/com.inworld.unity.core-3.4.0.tgz",
+    "com.inworld.unity.core": "file:../../inworld-unity-core",
     "com.unity.collab-proxy": "2.3.1",
     "com.unity.feature.development": "1.0.1",
     "com.unity.sentis": "1.2.0-exp.2",
