--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -3,7 +3,7 @@
     "com.inworld.unity.core": "file:../Assets/Inworld/com.inworld.unity.core-3.4.0.tgz",
     "com.unity.collab-proxy": "2.3.1",
     "com.unity.feature.development": "1.0.1",
-    "com.unity.sentis": "1.2.0-exp.2",
+    "com.unity.sentis": "1.5.0-pre.3",
     "com.unity.timeline": "1.7.6",
     "com.unity.ugui": "1.0.0",
     "com.unity.visualscripting": "1.9.2",
