--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,8 +1,9 @@
 {
   "dependencies": {
-    "com.inworld.unity.core": "file:../Assets/Inworld/com.inworld.unity.core-3.4.1.tgz",
+    "com.inworld.unity.core": "file:../../inworld-unity-core",
     "com.unity.collab-proxy": "2.3.1",
     "com.unity.feature.development": "1.0.1",
+    "com.unity.netcode.gameobjects": "1.6.0",
     "com.unity.sentis": "1.5.0-pre.3",
     "com.unity.timeline": "1.7.6",
     "com.unity.ugui": "1.0.0",
